@@ -74,6 +74,7 @@ import cz.tacr.elza.domain.ArrRequest;
 import cz.tacr.elza.domain.RulItemType;
 import cz.tacr.elza.domain.UsrPermission;
 import cz.tacr.elza.domain.WfIssue;
+import cz.tacr.elza.domain.vo.RelatedNodeDirection;
 import cz.tacr.elza.domain.vo.TitleValue;
 import cz.tacr.elza.domain.vo.TitleValues;
 import cz.tacr.elza.exception.BusinessException;
@@ -184,6 +185,84 @@ public class LevelTreeCacheService implements NodePermissionChecker {
 
 		public Map<Integer, TreeNode> getNodes() {
 			return nodes;
+		}
+		
+		public List<TreeNode> getSiblingsAround(ArrNode node, Integer around) {
+			return getSiblingsAround(node.getNodeId(), around);
+		}
+
+		public List<TreeNode> getSiblingsAround(Integer nodeId, Integer around) {
+			TreeNode tn = nodes.get(nodeId);
+			if(tn==null) {
+				return null;
+			}
+	        TreeNode parent = tn.getParent();
+			if(parent==null) {
+				return null;
+			}
+			List<TreeNode> children = parent.getChildren();
+	        int nodeIndex = children.indexOf(tn);
+	        int min = nodeIndex - around;
+	        int max = nodeIndex + around;	        
+
+	        min = min < 0 ? 0 : min;
+	        max = max > children.size() - 1 ? children.size() - 1 : max;
+
+	        List<TreeNode> result = new ArrayList<>();	        
+	        for (int i = min; i <= max; i++) {
+	            result.add(children.get(i));
+	        }
+
+	        return result;			
+		}
+
+		public Collection<TreeNode> getNodesByDirection(Integer nodeId, RelatedNodeDirection direction) {
+			TreeNode tn = this.nodes.get(nodeId);
+			if(tn==null) {
+				throw new BusinessException("Cannot find node", BaseCode.ID_NOT_EXIST)
+					.set("nodeId", nodeId);
+			}
+			switch(direction) {
+			case CHILDREN:
+				return tn.getChildren();
+			case NODE:
+				return Collections.singletonList(tn);
+			case PARENT:
+				TreeNode directParent = tn.getParent();
+				return directParent == null ? Collections.emptyList() : Collections.singletonList(directParent);
+			case ASCENDANTS:
+				List<TreeNode> parents = new ArrayList<>();
+				TreeNode parent = tn.getParent();
+				while(parent!=null) {
+					parents.add(parent);
+					parent = parent.getParent();
+				}
+				return parents;
+			case SIBLINGS:
+				return getSiblingsAround(nodeId, 1);
+			case ALL:
+				// find root and return descendants of root including root
+				TreeNode rootNode = tn;
+				while(rootNode.getParent()!=null) {
+					rootNode = rootNode.getParent();
+				}
+				Collection<TreeNode> descendants = getNodesByDirection(rootNode.getId(), RelatedNodeDirection.DESCENDANTS);
+				descendants.add(rootNode);
+				return descendants;
+			case DESCENDANTS:
+				List<TreeNode> result = new ArrayList<>();
+				List<TreeNode> toProcess = new LinkedList<>();				
+				toProcess.addAll(tn.getChildren());
+				while(!toProcess.isEmpty()) {
+					TreeNode node = toProcess.remove(0);
+					result.add(node);
+					toProcess.addAll(node.getChildren());
+				}
+				return result;
+			default:
+				throw new BusinessException("Unknown direction", BaseCode.INVALID_STATE)
+					.set("direction", direction);
+			}
 		}
     }
     
@@ -431,7 +510,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
                                           final TreeNode node,
                                           final Iterator<TreeNode> expandedNodesIterator) {
         if (!expandedNodesIterator.hasNext()) {
-            for (TreeNode child : node.getChilds()) {
+            for (TreeNode child : node.getChildren()) {
                 nodesMap.put(child.getId(), child);
             }
             return null;
@@ -441,7 +520,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
 
         //pokud má aktuální uzel a další otevřený uzel stejného rodiče, musíme postupně přidávat, protože v jeho dětech jsou další otevřené uzly
         if (nextNode.getParent().equals(node)) {
-            for (TreeNode child : node.getChilds()) {
+            for (TreeNode child : node.getChildren()) {
                 nodesMap.put(child.getId(), child);
                 //až najdeme další otevřený uzel v potomcích, přidáme jeho potomky do seznamu
                 if (child.equals(nextNode)) {
@@ -450,7 +529,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
             }
         } else {
             //pokud potomci nejsou otevření, můžeme je všechny přidat do seznamu
-            for (TreeNode child : node.getChilds()) {
+            for (TreeNode child : node.getChildren()) {
                 nodesMap.put(child.getId(), child);
             }
         }
@@ -529,7 +608,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
 
         //seřazení dětí všech uzlů podle pozice
         Comparator<TreeNode> comparator = (o1, o2) -> {
-            int ret = o1.getPosition().compareTo(o2.getPosition());
+            int ret = Integer.compare(o1.getPosition(), o2.getPosition());
             if (ret == 0) {
                 // check same position
                 logger.error("Two nodes on same position, nodeId: {}, nodeId: {}",
@@ -541,7 +620,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
             return ret;
         };
         for (TreeNode treeNode : nodeHierarchy.nodes.values()) {
-            treeNode.getChilds().sort(comparator);
+            treeNode.getChildren().sort(comparator);
         }
 
         // TODO: count reference mark dynamically
@@ -591,7 +670,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         rootNode.setReferenceMark(new Integer[0]);
         rootNode.setDepth(1);
         int childPosition = 1;
-        for (TreeNode child : rootNode.getChilds()) {
+        for (TreeNode child : rootNode.getChildren()) {
             initReferenceMarkAndDepth(child, childPosition++);
         }
     }
@@ -611,7 +690,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         treeNode.setDepth(referenceMark.length + 1);
 
         int childPosition = 1;
-        for (TreeNode child : treeNode.getChilds()) {
+        for (TreeNode child : treeNode.getChildren()) {
             initReferenceMarkAndDepth(child, childPosition++);
         }
     }
@@ -634,7 +713,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         result.setDepth(treeNode.getDepth());
 
         //nastavíme původní děti, které budou použity na vytvoření výsledného seznamu
-        result.setChilds(treeNode.getChilds());
+        result.setChildren(treeNode.getChildren());
 
         expandedTreeNodesMap.put(result.getId(), result);
 
@@ -900,7 +979,7 @@ private void processEvent(AbstractEventSimple event) {
             }
 
             TreeNodeVO client = new TreeNodeVO(treeNode.getId(), treeNode.getDepth(), null,
-                    !treeNode.getChilds().isEmpty(),
+                    !treeNode.getChildren().isEmpty(),
                     treeNode.getReferenceMark(), nodeMap.get(treeNode.getId()).getVersion());
             if (subtreeRoot != null) {
                 String[] referenceMark = createClientNodeReferenceMark(treeNode, levelTypeId, viewTitles, valuesMap,
@@ -1034,12 +1113,12 @@ private void processEvent(AbstractEventSimple event) {
             TreeNode deleteNode = versionTreeMap.get(nodeId);
             TreeNode parent = deleteNode.getParent();
             if (parent != null) {
-                int deleteNodeIndex = parent.getChilds().indexOf(deleteNode);
-                parent.getChilds().remove(deleteNode);
-                repositionList(parent.getChilds());
+                int deleteNodeIndex = parent.getChildren().indexOf(deleteNode);
+                parent.getChildren().remove(deleteNode);
+                repositionList(parent.getChildren());
 
-                if (parent.getChilds().size() > deleteNodeIndex) {
-                    initReferenceMarkLower(parent.getChilds(), parent.getChilds().get(deleteNodeIndex));
+                if (parent.getChildren().size() > deleteNodeIndex) {
+                    initReferenceMarkLower(parent.getChildren(), parent.getChildren().get(deleteNodeIndex));
                 }
             }
             removeFromCacheTree(versionTreeMap, deleteNode);
@@ -1055,7 +1134,7 @@ private void processEvent(AbstractEventSimple event) {
     private void removeFromCacheTree(final Map<Integer, TreeNode> versionTreeMap,
                                      final TreeNode deleteNode) {
         versionTreeMap.remove(deleteNode.getId());
-        for (TreeNode child : deleteNode.getChilds()) {
+        for (TreeNode child : deleteNode.getChildren()) {
             removeFromCacheTree(versionTreeMap, child);
         }
     }
@@ -1096,7 +1175,7 @@ private void processEvent(AbstractEventSimple event) {
         case ADD_LEVEL_BEFORE: {
             newNode = createEmptyTreeNode(newNodeId, staticNode.getParent());
 
-            LinkedList<TreeNode> parentChilds = staticNode.getParent().getChilds();
+            List<TreeNode> parentChilds = staticNode.getParent().getChildren();
             int staticNodeIndex = parentChilds.indexOf(staticNode);
             parentChilds.add(staticNodeIndex, newNode);
             repositionList(parentChilds);
@@ -1106,7 +1185,7 @@ private void processEvent(AbstractEventSimple event) {
         case ADD_LEVEL_AFTER: {
             newNode = createEmptyTreeNode(newNodeId, staticNode.getParent());
 
-            LinkedList<TreeNode> parentChilds = staticNode.getParent().getChilds();
+            List<TreeNode> parentChilds = staticNode.getParent().getChildren();
             int staticNodeIndex = parentChilds.indexOf(staticNode) + 1;
             parentChilds.add(staticNodeIndex, newNode);
             repositionList(parentChilds);
@@ -1116,8 +1195,8 @@ private void processEvent(AbstractEventSimple event) {
         case ADD_LEVEL_UNDER: {
             newNode = createEmptyTreeNode(newNodeId, staticNode);
 
-            LinkedList<TreeNode> parentChilds = staticNode.getChilds();
-            parentChilds.addLast(newNode);
+            List<TreeNode> parentChilds = staticNode.getChildren();
+            parentChilds.add(newNode);
             repositionList(parentChilds);
             initReferenceMarkAndDepth(newNode, newNode.getPosition());
             break;
@@ -1159,22 +1238,22 @@ private void processEvent(AbstractEventSimple event) {
 
             for (Integer transportNodeId : nodeIds) {
                 TreeNode transportNode = versionTreeMap.get(transportNodeId);
-                transportNode.getParent().getChilds().remove(transportNode);
+                transportNode.getParent().getChildren().remove(transportNode);
                 transportNodes.add(transportNode);
             }
             TreeNode transportParent = transportNodes.get(0).getParent();
-            repositionList(transportParent.getChilds());
+            repositionList(transportParent.getChildren());
 
             boolean siblingMove = transportParent.equals(staticParent);
-            if (!siblingMove && !transportParent.getChilds().isEmpty()) {
+            if (!siblingMove && !transportParent.getChildren().isEmpty()) {
                 //při přesunu přečíslujeme všechny node, které jsou pod rodičem, jehož děti přesouváme
-                initReferenceMarkLower(transportParent.getChilds(), transportParent.getChilds().getFirst());
+                initReferenceMarkLower(transportParent.getChildren(), transportParent.getChildren().get(0));
             }
 
 
             switch (moveLevelType) {
                 case MOVE_LEVEL_BEFORE: {
-                    LinkedList<TreeNode> staticParentChilds = staticParent.getChilds();
+                    List<TreeNode> staticParentChilds = staticParent.getChildren();
                     int staticIndex = staticParentChilds.indexOf(staticNode);
 
                     for (TreeNode transportNode : transportNodes) {
@@ -1188,7 +1267,7 @@ private void processEvent(AbstractEventSimple event) {
                     break;
                 }
                 case MOVE_LEVEL_AFTER: {
-                    LinkedList<TreeNode> staticParentChilds = staticParent.getChilds();
+                    List<TreeNode> staticParentChilds = staticParent.getChildren();
                     int staticIndex = staticParentChilds.indexOf(staticNode) + 1;
 
                     for (TreeNode transportNode : transportNodes) {
@@ -1200,11 +1279,11 @@ private void processEvent(AbstractEventSimple event) {
                     break;
                 }
                 case MOVE_LEVEL_UNDER: {
-                    LinkedList<TreeNode> staticParentChilds = staticNode.getChilds();
+                    List<TreeNode> staticParentChilds = staticNode.getChildren();
 
                     for (TreeNode transportNode : transportNodes) {
                         transportNode.setParent(staticNode);
-                        staticParentChilds.addLast(transportNode);
+                        staticParentChilds.add(transportNode);
                     }
 
                     repositionList(staticParentChilds);
@@ -1215,9 +1294,9 @@ private void processEvent(AbstractEventSimple event) {
 
             //přečíslujeme všechny prvky pod prvním přidaným (včetně) -> pokud přesouváme na stejné úrovni, přečíslujeme všechny
             if (siblingMove) {
-                initReferenceMarkLower(staticParent.getChilds(), staticParent.getChilds().getFirst());
+                initReferenceMarkLower(staticParent.getChildren(), staticParent.getChildren().get(0));
             } else {
-                initReferenceMarkLower(staticParent.getChilds(), transportNodes.get(0));
+                initReferenceMarkLower(staticParent.getChildren(), transportNodes.get(0));
             }
 
 
@@ -1242,7 +1321,7 @@ private void processEvent(AbstractEventSimple event) {
      * @param childs          seznam všech potomků, ve kterých hledáme
      * @param firstReposition první uzel, od kterého se začnou aktualizovat označení
      */
-    private void initReferenceMarkLower(final LinkedList<TreeNode> childs, final TreeNode firstReposition) {
+    private void initReferenceMarkLower(final List<TreeNode> childs, final TreeNode firstReposition) {
 
         boolean initReference = false;
         int position = firstReposition.getPosition();
@@ -1348,7 +1427,7 @@ private void processEvent(AbstractEventSimple event) {
             } else {
                 parentNode = treeMap.get(param.getParentNodeId());
             }
-            node = parentNode.getChilds().get(param.getNodeIndex());
+            node = parentNode.getChildren().get(param.getNodeIndex());
         } else {
             throw new SystemException("Není zvolen identifikátor JP nebo její index", BaseCode.INVALID_STATE);
         }
@@ -1365,8 +1444,8 @@ private void processEvent(AbstractEventSimple event) {
             result.setNodeIndex(0);
             result.setNodeCount(1);
         } else {
-            result.setNodeIndex(parentNode.getChilds().indexOf(node));
-            result.setNodeCount(parentNode.getChilds().size());
+            result.setNodeIndex(parentNode.getChildren().indexOf(node));
+            result.setNodeCount(parentNode.getChildren().size());
         }
 
         if (BooleanUtils.isTrue(param.getFormData())) {
@@ -1407,7 +1486,7 @@ private void processEvent(AbstractEventSimple event) {
         if (parentNode == null) {
             childs = Collections.singletonList(node);
         } else {
-            childs = parentNode.getChilds();
+            childs = parentNode.getChildren();
         }
         int diff = childs.size() - (childs.size() % maxCount);
         if (diff == childs.size()) {
@@ -1426,7 +1505,7 @@ private void processEvent(AbstractEventSimple event) {
     private Collection<TreeNodeVO> getChildren(final TreeNode node, final ArrFundVersion fundVersion) {
 
         LinkedHashMap<Integer, TreeNode> nodesMap = new LinkedHashMap<>();
-        for (TreeNode treeNode : node.getChilds()) {
+        for (TreeNode treeNode : node.getChildren()) {
             nodesMap.put(treeNode.getId(), treeNode);
         }
 
@@ -2043,7 +2122,7 @@ private void processEvent(AbstractEventSimple event) {
         TreeNode parent = treeNode.getParent();
 
         Node node = new Node(id, arrNode.getVersion(), arrNode.getUuid());
-        node.setHasChildren(!treeNode.getChilds().isEmpty());
+        node.setHasChildren(!treeNode.getChildren().isEmpty());
         node.setDepth(treeNode.getDepth());
 
         String defaultTitle;
@@ -2195,7 +2274,7 @@ private void processEvent(AbstractEventSimple event) {
         if (parentNode == null) {
             childs = Collections.singletonList(node);
         } else {
-            childs = parentNode.getChilds();
+            childs = parentNode.getChildren();
         }
 
         if (fulltextFilter != null) {
@@ -2316,7 +2395,7 @@ private void processEvent(AbstractEventSimple event) {
         }
 
         if (parentReferenceMark.length == 0) {
-            return new String[] {node.getPosition().toString()};
+            return new String[] {Integer.toString(node.getPosition())};
         }
 
         String[] parentMark = parentReferenceMark;
@@ -2449,7 +2528,7 @@ private void processEvent(AbstractEventSimple event) {
 
         if (depth == Depth.ONE_LEVEL) {
             TreeNode node = versionTreeCache.get(nodeId);
-            return node.getChilds().stream().mapToInt(TreeNode::getId).boxed().collect(Collectors.toSet());
+            return node.getChildren().stream().mapToInt(TreeNode::getId).boxed().collect(Collectors.toSet());
         }
 
         Set<Integer> nodeIds = new HashSet<>();
@@ -2459,9 +2538,9 @@ private void processEvent(AbstractEventSimple event) {
         while (!children.isEmpty()) {
             TreeNode node = children.poll();
 
-            List<TreeNode> childs = node.getChilds();
+            List<TreeNode> childs = node.getChildren();
             if (childs != null) {
-                node.getChilds().forEach(child -> {
+                node.getChildren().forEach(child -> {
                     nodeIds.add(child.getId());
                     children.add(child);
                 });
@@ -2479,7 +2558,7 @@ private void processEvent(AbstractEventSimple event) {
      */
     public void walkTree(@NotNull final TreeNode root, @NotNull final Consumer<TreeNode> callback) {
         callback.accept(root);
-        LinkedList<TreeNode> childs = root.getChilds();
+        List<TreeNode> childs = root.getChildren();
         if (childs != null) {
             for (TreeNode child : childs) {
                 walkTree(child, callback);
@@ -2519,5 +2598,13 @@ private void processEvent(AbstractEventSimple event) {
 	public synchronized TreeNode getTreeNode(ArrFundVersion fundVersion, ArrNode node) {
 		Map<Integer, TreeNode> nodeMap = getNodeHierarchy(fundVersion).getNodes();
 		return nodeMap.get(node.getNodeId());
+	}
+
+	public Collection<TreeNode> findNodesByDirection(ArrNode node, ArrFundVersion version, RelatedNodeDirection direction) {
+		NodeHierarchy nh = getNodeHierarchy(version);
+		if(nh==null) {
+			throw new BusinessException("Cannot read node hierarchy", BaseCode.INVALID_STATE);
+		}
+		return nh.getNodesByDirection(node.getNodeId(), direction);
 	}
 }
